# duckdb-xpath

./: .gitattributes  Cargo.toml  Makefile  README.md
src/: index.rs  lib.rs  scalar.rs  table.rs
test/benchmark/: bench_simdxml.sql  bench_webbed.sql  patent_corpus_100.parquet  patent_corpus_us_10k.parquet  patent_corpus_usep_10k.parquet  xpath_vs_webbed.sql
test/sql/: indexed.xml  read_xml.test  test.xml  xpath_comprehensive.test  xpath_count.test  xpath_eval.test  xpath_exists.test  xpath_index.test  xpath_list.test  xpath_text.test  xpath_vectorized.test
